# openagentmesh

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ecosystem.md  nats-py.md  python-packaging.md
cookbook/shared_plan/: expected_usage.py  scenario.md  scenario_test.py
docs/: help.md  index.md  quickstart.md
docs/adr/: .processed.json  0001-reject-json-rpc-as-internal-message-standard.md  0002-bidirectional-mcp-bridge-design.md  0003-mcp-export-flag-as-boolean.md  (+21 more)
km/: agentmesh-developer-experience.md  agentmesh-liveness-and-failure.md  agentmesh-registry-and-discovery.md  agentmesh-spec.md  ideas.md
sdk-ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
tests/: test_agent_card.py  test_async_callback.py  test_auth.py  test_cli_demo.py  test_core_integration.py  test_embedded_nats.py  test_error_topic.py  test_errors.py  test_errors_taxonomy.py  test_instance_id.py  test_kv_ergonomics.py  test_lifecycle.py  test_liveness.py  test_mcp_bridge.py  test_mcp_export.py  test_mcp_stdio_e2e.py  test_mesh.py  test_models.py  test_nats_server.py  test_observe.py  test_persona_team.py  test_publish.py  test_publisher.py  test_resolve_models.py  test_sources.py  test_subscribe.py  test_tool_conversion.py  test_ui_server.py  test_usage.py  test_workspace.py
ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+308 files in other folders)
