[project]
name = "agentmesh"
version = "0.1.0"
description = "Python SDK for agent-to-agent communication based on the Open Agent Mesh Protocol"
readme = "README.md"
authors = [
    { name = "Luca Sorgiacomo", email = "luca@progresslab.it" }
]
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.14.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
mesh = "agentmesh.cli:app"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "zensical>=0.0.32",
]
demo = [
    "openai>=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentmesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.environment]
python = ".venv"
